Added new button

--- a/index.html
+++ b/index.html
@@ -13,5 +13,7 @@
       possimus ducimus voluptate, suscipit expedita quisquam esse voluptatibus
       quam debitis doloribus.
     </p>
+    <button>Hello</button>
+    <button>Bye</button>
   </body>
 </html>
