added lorem button

--- a/index.html
+++ b/index.html
@@ -15,5 +15,7 @@
     </p>
     <button>Hello</button>
     <button>Bye</button>
+    <button>Click me</button>
+    <button>lorem</button>
   </body>
 </html>
